--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,8 @@
             android:layout_width="273dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:id="@+id/editTextEmail" />
+            android:id="@+id/editTextEmail"
+            android:inputType="textPersonName" />
 
     </LinearLayout>
 
@@ -44,10 +45,10 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/editTextPassword"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:inputType="textPersonName" />
     </LinearLayout>
 
     <Button
