--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="User Name:"
+            android:text="@string/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewUserName" />
@@ -27,7 +27,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:id="@+id/editTextEmail"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            tools:ignore="LabelFor,TextFields" />
 
     </LinearLayout>
 
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Password:"
+            android:text="@string/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewPassword" />
@@ -48,19 +49,26 @@
             android:ems="10"
             android:id="@+id/editTextPassword"
             android:layout_weight="1"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            tools:ignore="InefficientWeight,LabelFor,TextFields" />
     </LinearLayout>
 
     <Button
-        android:text="Sign In With Existing Credentials"
+        android:text="@string/sign_in_with_existing_credentials"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttonLogin" />
 
     <Button
-        android:text="Create a New User"
+        android:text="@string/create_a_new_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttonCreate" />
+
+    <Button
+        android:text="@string/sign_out"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonLogout" />
 
 </LinearLayout>
